[tool.poetry]
name = "lang-chain-qa"
version = "0.1.0"
description = ""
authors = ["grzenkom <marek.grzenkowicz@roche.com>"]
readme = "README.md"
packages = [{include = "lang_chain_qa", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
ipywidgets = "8.1.0"
jupyterlab = "4.0.4"
# for a list of `llms` extras, see https://github.com/langchain-ai/langchain/blob/master/libs/langchain/pyproject.toml#L229
langchain = {version = "0.0.251", extras = ["llms"]}
# workaround for "libcublas.so.*[0-9] not found in the system path", https://stackoverflow.com/a/76647180/95
torch = ">=2.0.0, !=2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
