[tool.poetry]
name = "lang-chain-qa"
version = "0.1.0"
description = ""
authors = ["grzenkom <marek.grzenkowicz@roche.com>"]
readme = "README.md"
packages = [{include = "lang_chain_qa", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

# LangChain
langchain = {version = "0.0.266", extras = ["llms"]}  # for a list of `llms` extras, see https://github.com/langchain-ai/langchain/blob/master/libs/langchain/pyproject.toml#L229
torch = ">=2.0.0, !=2.0.1"  # workaround for "libcublas.so.*[0-9] not found in the system path", https://stackoverflow.com/a/76647180/95

# loading and indexing documents for LLMs
chromadb = "0.4.5"
pysqlite3-binary = "0.5.1"
sentence-transformers = "2.2.2"
wikipedia = "1.4.0"

# Jupyter
notebook = "6.5.5"
rise = "5.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
