[tool.poetry]
name = "lang-chain-qa"
authors = ["Marek Grzenkowicz <marek.grzenkowicz@roche.com>"]
description = ""
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"

# LangChain
langchain = {version = "0.0.348", extras = ["llms"]}  # for a list of `llms` extras, see https://github.com/langchain-ai/langchain/blob/master/libs/langchain/pyproject.toml#L229
torch = "2.1.1"

# loading and indexing documents for RAG
chromadb = "0.4.18"
pysqlite3-binary = "0.5.2.post2"
sentence-transformers = "2.2.2"
wikipedia = "1.4.0"

# word embeddings
spacy = "3.7.2"
en_core_web_md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.0/en_core_web_md-3.7.0.tar.gz" }

# Jupyter (v6, because v7 does not work well with RISE yet)
ipywidgets = "8.1.1"
jupyter-contrib-nbextensions = "0.7.0"
notebook = "6.5.6"
rise = "5.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
